--- a/community/comparisons.mdx
+++ b/community/comparisons.mdx
@@ -46,7 +46,18 @@ Here are some videos made by people in our community showcasing what Vapi can do
         referrerpolicy="strict-origin-when-cross-origin"
         allowfullscreen
     />
-</div>
+
+  <iframe
+    width="100%"
+    height="315"
+    src="https://www.youtube.com/embed/rc0XGjI4QKM&ab_channel=IbrahimMunir"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerpolicy="strict-origin-when-cross-origin"
+    allowfullscreen
+  />
+  </div>
 
 ## Send Us Your Video
 
