--- a/community/guide.mdx
+++ b/community/guide.mdx
@@ -186,6 +186,17 @@ Here are some videos made by people in our community showcasing what Vapi can do
     referrerpolicy="strict-origin-when-cross-origin"
     allowfullscreen
   />
+  
+  <iframe
+    width="100%"
+    height="315"
+    src="https://youtu.be/aCxjIS6M4CY"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerpolicy="strict-origin-when-cross-origin"
+    allowfullscreen
+  />
   </div>
 
 ## Send Us Your Video
