--- a/community/guide.mdx
+++ b/community/guide.mdx
@@ -143,49 +143,64 @@ Here are some videos made by people in our community showcasing what Vapi can do
         allowfullscreen
     />
 
-  <iframe
+{" "}
+
+<iframe
+  width="100%"
+  height="315"
+  src="https://www.youtube.com/embed/nyzSRnuPAS8?si=w89PVdgvenwFbkZj"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerpolicy="strict-origin-when-cross-origin"
+  allowfullscreen
+/>
+<iframe
+  width="100%"
+  height="315"
+  src="https://www.youtube.com/embed/EFJoQ6wwf9I?si=0CnSsAcW1zNshh01"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerpolicy="strict-origin-when-cross-origin"
+  allowfullscreen
+/>
+<iframe
+  width="100%"
+  height="315"
+  src="https://www.youtube.com/embed/FQjWcxfIo2g"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerpolicy="strict-origin-when-cross-origin"
+  allowfullscreen
+/>
+
+    <iframe
     width="100%"
     height="315"
-    src="https://www.youtube.com/embed/nyzSRnuPAS8?si=w89PVdgvenwFbkZj"
+    src="https://www.youtube.com/embed/2VA2mvzugts"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     referrerpolicy="strict-origin-when-cross-origin"
     allowfullscreen
-  />
-  
-  <iframe
-    width="100%"
-    height="315"
-    src="https://www.youtube.com/embed/EFJoQ6wwf9I?si=0CnSsAcW1zNshh01"
-    title="YouTube video player"
-    frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    referrerpolicy="strict-origin-when-cross-origin"
-    allowfullscreen
-  />
-  
-  <iframe
-    width="100%"
-    height="315"
-    src="https://youtu.be/RxdROxar_0g?si=dKOpxeJqngI3eSTW"
-    title="YouTube video player"
-    frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    referrerpolicy="strict-origin-when-cross-origin"
-    allowfullscreen
-  />
-  
-  <iframe
-    width="100%"
-    height="315"
-    src="https://www.youtube.com/embed/FQjWcxfIo2g"
-    title="YouTube video player"
-    frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    referrerpolicy="strict-origin-when-cross-origin"
-    allowfullscreen
-  />
+
+/>
+
+{" "}
+
+<iframe
+  width="100%"
+  height="315"
+  src="https://www.youtube.com/embed/Nj5nirt_m6c"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerpolicy="strict-origin-when-cross-origin"
+  allowfullscreen
+/>
+
   </div>
 
 ## Send Us Your Video
@@ -193,12 +208,12 @@ Here are some videos made by people in our community showcasing what Vapi can do
 Have a video showcasing Vapi that you want us to feature? Let us know:
 
 <CardGroup cols={2}>
-    <Card
-        title="Send Us Your Video"
-        icon="video-arrow-up-right"
-        iconType="solid"
-        href="mailto:support@vapi.ai"
-    >
-        Send us your video showcasing what Vapi can do, we'd like to feature it.
-    </Card>
+  <Card
+    title="Send Us Your Video"
+    icon="video-arrow-up-right"
+    iconType="solid"
+    href="mailto:support@vapi.ai"
+  >
+    Send us your video showcasing what Vapi can do, we'd like to feature it.
+  </Card>
 </CardGroup>
