--- a/community/inbound-outbound.mdx
+++ b/community/inbound-outbound.mdx
@@ -39,16 +39,30 @@ Here are some videos made by people in our community showcasing what Vapi can do
         allowfullscreen
     />
 
-  <iframe
+{" "}
+<iframe
+  width="100%"
+  height="315"
+  src="https://www.youtube.com/embed/mPC-YOmidqE"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerpolicy="strict-origin-when-cross-origin"
+  allowfullscreen
+/>
+
+    <iframe
     width="100%"
     height="315"
-    src="https://www.youtube.com/embed/mPC-YOmidqE"
+    src="https://www.youtube.com/embed/xsDc8ALGaeE"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     referrerpolicy="strict-origin-when-cross-origin"
     allowfullscreen
-  />
+
+/>
+
   </div>
 
 ## Send Us Your Video
@@ -56,12 +70,12 @@ Here are some videos made by people in our community showcasing what Vapi can do
 Have a video showcasing Vapi that you want us to feature? Let us know:
 
 <CardGroup cols={2}>
-    <Card
-        title="Send Us Your Video"
-        icon="video-arrow-up-right"
-        iconType="solid"
-        href="mailto:support@vapi.ai"
-    >
-        Send us your video showcasing what Vapi can do, we'd like to feature it.
-    </Card>
+  <Card
+    title="Send Us Your Video"
+    icon="video-arrow-up-right"
+    iconType="solid"
+    href="mailto:support@vapi.ai"
+  >
+    Send us your video showcasing what Vapi can do, we'd like to feature it.
+  </Card>
 </CardGroup>
