--- a/community/special-mentions.mdx
+++ b/community/special-mentions.mdx
@@ -6,14 +6,24 @@ description: "Videos showcasing Vapi out in the wild."
 Here are some videos made by people in our community showcasing what Vapi can do:
 
 <div class="video-grid">
-    <iframe
-        src="https://www.youtube.com/embed/WCYf2Agml-s?si=dAMT_Xf7vPHmjqKJ&amp;start=929"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin"
-        allowfullscreen
-    />
+  <iframe
+    src="https://www.youtube.com/embed/WCYf2Agml-s?si=dAMT_Xf7vPHmjqKJ&amp;start=929"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerpolicy="strict-origin-when-cross-origin"
+    allowfullscreen
+  />
+  <iframe
+    width="100%"
+    height="315"
+    src="https://www.youtube.com/embed/rc0XGjI4QKM"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerpolicy="strict-origin-when-cross-origin"
+    allowfullscreen
+  />
 </div>
 
 ## Send Us Your Video
@@ -21,12 +31,12 @@ Here are some videos made by people in our community showcasing what Vapi can do
 Have a video showcasing Vapi that you want us to feature? Let us know:
 
 <CardGroup cols={2}>
-    <Card
-        title="Send Us Your Video"
-        icon="video-arrow-up-right"
-        iconType="solid"
-        href="mailto:support@vapi.ai"
-    >
-        Send us your video showcasing what Vapi can do, we'd like to feature it.
-    </Card>
+  <Card
+    title="Send Us Your Video"
+    icon="video-arrow-up-right"
+    iconType="solid"
+    href="mailto:support@vapi.ai"
+  >
+    Send us your video showcasing what Vapi can do, we'd like to feature it.
+  </Card>
 </CardGroup>
